chrome/browser/icons.css
/* ... */
#panelMenuBookmarkThisPage {
  list-style-image: url("chrome://browser/skin/bookmark-hollow.svg");
}

#panelMenu_viewBookmarksToolbar {
  list-style-image: url("chrome://browser/skin/bookmarks-toolbar.svg");
}

#appMenuRecentlyClosedTabs {
  list-style-image: url("chrome://devtools/skin/images/debugging-tabs.svg");
}

#appMenu-restoreSession {
  list-style-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="context-fill" fill-opacity="context-fill-opacity"><path d="M13 0H3a3 3 0 00-3 3v8a3 3 0 003 3h4l-.3.4a1 1 0 101.6 1.2l1.5-2a1 1 0 000-1.2l-1.5-2a1 1 0 00-1.6 1.2l.3.4H3a1 1 0 01-1-1V5h12v6a1 1 0 01-1 1 1 1 0 000 2 3 3 0 003-3V3a3 3 0 00-3-3zM2 4V3a1 1 0 011-1h10a1 1 0 011 1v1z"/></svg>');
}

#appMenuClearRecentHistory {
  list-style-image: url("chrome://browser/skin/forget.svg");
}

#appmenu-moreTools-button,
#overflowMenu-customize-button {
  list-style-image: url("chrome://browser/skin/customize.svg");
}

.subviewbutton[key="key_aboutProcesses"] {
  list-style-image: url("chrome://global/skin/icons/performance.svg");
}

.subviewbutton[key="key_browserToolbox"] {
  list-style-image: url("chrome://devtools/skin/images/fox-smiling.svg");
}

.subviewbutton[key="key_responsiveDesignMode"] + .subviewbutton {
  list-style-image: url("chrome://devtools/skin/images/command-eyedropper.svg");
}

#appMenu_menu_HelpPopup_reportPhishingtoolmenu {
  list-style-image: url("chrome://global/skin/icons/lightbulb.svg");
}

#appMenu_aboutName {
  list-style-image: url("chrome://devtools/skin/images/browsers/firefox.svg");
}

#identity-popup-clear-sitedata-button {
  list-style-image: url("chrome://global/skin/icons/delete.svg");
}

#identity-popup-more-info {
  list-style-image: url("chrome://global/skin/icons/info.svg");
}

#protections-popup-show-report-button {
  list-style-image: url("chrome://browser/skin/controlcenter/dashboard.svg");
}

#allTabsMenu-containerTabsButton {
  list-style-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="context-fill"><rect width="6" height="6" x="1" y="1" rx="1"/><path d="M14.75 3H13V1.25a.25.25 0 00-.25-.25h-1.5a.25.25 0 00-.25.25V3H9.25a.25.25 0 00-.25.25v1.5a.25.25 0 00.25.25H11v1.75a.25.25 0 00.25.25h1.5a.25.25 0 00.25-.25V5h1.75a.25.25 0 00.25-.25v-1.5a.25.25 0 00-.25-.25z"/><rect width="6" height="6" x="1" y="9" rx="1"/><rect width="6" height="6" x="9" y="9" rx="1"/></svg>');
}

menupopup > menu:not([icon], .menu-iconic),
menupopup:not(.in-menulist)
  > menuitem:not([checked="true"], [icon], .menuitem-iconic) {
  padding-inline-start: calc(1em + 16px + 8px) !important;
  background-position: left 1em center;
  background-repeat: no-repeat;
  background-size: 16px;
  -moz-context-properties: fill;
  fill: currentColor;
}

menupopup.toolbar-menupopup menuitem:not(.menuitem-iconic) {
  padding-inline-start: calc(
    var(--arrowpanel-menuitem-padding-inline) + 16px + 8px
  ) !important;
  background-position: left var(--arrowpanel-menuitem-padding-inline) center;
}

#context_openANewTab,
#toolbar-context-openANewTab,
#menu_newNavigatorTab {
  background-image: url("chrome://browser/skin/new-tab.svg");
}

#context_reloadTab,
#context_reloadSelectedTabs,
#toolbar-context-reloadSelectedTab,
#context-reloadframe {
  background-image: url("chrome://global/skin/icons/reload.svg");
}

#context_toggleMuteTab,
#context_toggleMuteSelectedTabs,
#context-media-mute {
  background-image: url("chrome://global/skin/media/audio-muted.svg");
}

#context_toggleMuteTab[muted],
#context_toggleMuteSelectedTabs[muted],
#context-media-unmute {
  background-image: url("chrome://global/skin/media/audio.svg");
}

#context_pinTab,
#context_pinSelectedTabs,
menuitem.customize-context-moveToPanel,
menuitem.unified-extensions-context-menu-pin-to-toolbar {
  background-image: url("chrome://activity-stream/content/data/content/assets/glyph-pin-16.svg");
}

#context_unpinTab,
#context_unpinSelectedTabs {
  background-image: url("chrome://activity-stream/content/data/content/assets/glyph-unpin-16.svg");
}

#context_bookmarkSelectedTabs,
#context_bookmarkTab,
#toolbar-context-bookmarkSelectedTab,
#context-bookmarklink,
#context-bookmarkframe,
#placesContext_createBookmark,
#syncedTabsBookmarkSelected,
#menu_bookmarkThisPage {
  background-image: url("chrome://browser/skin/bookmark-hollow.svg");
}

#context_sendTabToDevice,
#context-sendlinktodevice,
#context-sendpagetodevice {
  background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"><path fill="context-fill" fill-opacity="context-fill-opacity" d="M12 0H4a2 2 0 00-2 2v2a1 1 0 001 1 1 1 0 001-1V2.5a.5.5 0 01.5-.5h7a.5.5 0 01.5.5v10a.5.5 0 01-.5.5h-7a.5.5 0 01-.5-.5V11a1 1 0 00-1-1 1 1 0 00-1 1v3a2 2 0 002 2h8a2 2 0 002-2V2a2 2 0 00-2-2zM9 15H7v-1h2z"/><path fill="context-fill" fill-opacity="context-fill-opacity" d="M5.146 10.146a.5.5 0 10.707.707l3-3a.5.5 0 000-.708l-3-3a.5.5 0 00-.707.707L7.293 7H.5a.5.5 0 000 1h6.793z"/></svg>');
}

.share-tab-url-item {
  background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"><path fill="context-fill" d="M12.707 4.294l-4-4A1 1 0 008.38.077a.984.984 0 00-.246-.05A.938.938 0 008 0a.938.938 0 00-.134.027.984.984 0 00-.246.05A1 1 0 007.291.3l-4 4a1 1 0 001.416 1.408L7 3.415V11a1 1 0 002 0V3.415l2.293 2.293a1 1 0 001.414-1.414z"/><path fill="context-fill" d="M14 9a1 1 0 00-1 1v3a1 1 0 01-1 1H4a1 1 0 01-1-1v-3a1 1 0 00-2 0v3a3 3 0 003 3h8a3 3 0 003-3v-3a1 1 0 00-1-1z"/></svg>');
}
/* ... */

